<resources>
    <string name="app_name">Popular Movies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="error">There was an error, please check network connection</string>
    <string name="retry">Retry</string>
    <string name="poster_description">Movie Poster</string>
    <string name="original_title">Original Title:</string>
    <string name="release_date">Release Date:</string>
    <string name="user_rating">User Rating:</string>
    <string name="rating">%1$s/10 (%2$s votes)</string>
    <string name="synopsis">Synopsis:</string>
    <string name="author">Author: %1$s</string>
</resources>
