<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_popular"
            android:title="@string/popular"
            android:orderInCategory="1"
            app:showAsAction="collapseActionView"
            android:checkable="true"
            android:checked="true"/>
        <item
            android:id="@+id/sort_top_rated"
            android:title="@string/top_rated"
            android:orderInCategory="2"
            app:showAsAction="collapseActionView"
            android:checkable="true"/>
        <item
            android:id="@+id/show_favorites"
            android:title="@string/favorites"
            android:orderInCategory="3"
            app:showAsAction="collapseActionView"
            android:checkable="true"/>
    </group>
</menu>