<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_sv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_med">

        <LinearLayout
            android:id="@+id/image_ll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/background_dark"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster_iv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/poster_height"
                android:adjustViewBounds="true"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/poster_description"
                android:focusableInTouchMode="true"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/favorite_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:button="@android:drawable/btn_star"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@+id/image_ll"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/title_label_tv"
            style="@style/DetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingStart="@dimen/padding_med"
            android:paddingEnd="@dimen/padding_none"
            android:text="@string/original_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_ll" />

        <TextView
            android:id="@+id/title_tv"
            style="@style/DetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/title_label_tv"
            app:layout_constraintTop_toTopOf="@+id/title_label_tv" />

        <TextView
            android:id="@+id/date_label_tv"
            style="@style/DetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingStart="@dimen/padding_med"
            android:paddingEnd="@dimen/padding_none"
            android:text="@string/release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <TextView
            android:id="@+id/date_tv"
            style="@style/DetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/date_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/date_label_tv"
            app:layout_constraintTop_toTopOf="@+id/date_label_tv" />

        <TextView
            android:id="@+id/rating_label_tv"
            style="@style/DetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingStart="@dimen/padding_med"
            android:paddingEnd="@dimen/padding_none"
            android:text="@string/user_rating"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_label_tv" />

        <TextView
            android:id="@+id/rating_tv"
            style="@style/DetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/rating_label_tv"
            app:layout_constraintStart_toEndOf="@id/rating_label_tv"
            app:layout_constraintTop_toTopOf="@+id/rating_label_tv" />

        <TextView
            android:id="@+id/synopsis_label_tv"
            style="@style/DetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingStart="@dimen/padding_med"
            android:paddingEnd="@dimen/padding_none"
            android:text="@string/synopsis"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_label_tv" />

        <TextView
            android:id="@+id/synopsis_tv"
            style="@style/DetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_large"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_label_tv"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/detail_error_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_tv">

            <TextView
                android:id="@+id/error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/padding_med"
                android:text="@string/error"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="14sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/detail_retry_butt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:textAllCaps="false" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/detail_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingTop="@dimen/padding_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_tv" />

        <ExpandableListView
            android:id="@+id/info_elv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_med"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/synopsis_tv"
            tools:layout_editor_absoluteX="10dp" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>